# cpp_batched_random

./: CMakeLists.txt  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ubuntu-ci.yml  vs-ci.yml
benchmarks/: benchmark.cpp
include/: batched_random.h
tests/: basic.cpp
